# fadroma-workshop

./: Cargo.toml  README.md  WALKTHROUGH.md  api.ts  fadroma.json  ops.ts  package-lock.json  package.json  pnpm-lock.yaml  shell.nix
src/auction/: Cargo.toml
src/auction/src/: lib.rs
src/distributor/: Cargo.toml
src/factory/: Cargo.toml
src/factory/src/: lib.rs
src/shared/: Cargo.toml
src/shared/src/: lib.rs
src/supplier/: Cargo.toml
src/tests/: Cargo.toml
src/tests/src/: auction.rs  lib.rs
wasm/: auction@HEAD.wasm.sha256  distributor@HEAD.wasm.sha256  factory@HEAD.wasm.sha256  supplier@HEAD.wasm.sha256
