[package]
name = "auction"
version = "0.1.0"
edition = "2021"
authors = []
keywords = ["fadroma"]
description = ""
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fadroma = { version = "0.8.7", features = ["vk"] }
serde = { version = "1.0.114", default-features = false, features = ["derive"] }
shared = { path = "../shared" }
