[package]
name = "factory"
version = "0.1.0"
edition = "2021"
authors = []
keywords = ["fadroma"]
description = ""
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fadroma = { git = "https://github.com/hackbg/fadroma", tag = "crate@0.8.0", features = ["scrt"] }
serde = { version = "1.0.114", default-features = false, features = ["derive"] }
shared = { path = "../shared" }
